# SPEECH-MARC

./: README.md  README_SPEECHMARC.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
pyproject.toml.github/workflows/: python-package.yml
src/speechmarc/: __init__.py  cli.py  evaluate.py  feature_select.py  features.py  preprocessing.py  residualize.py
tests/: test_imports.py
